--- a/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
@@ -69,12 +69,12 @@
             <div class="row">  
                 <div class="form-group col-md-3">
                     <label for="id_Cpf">CPF:</label> 
-                    <input type="text" name="Cpf" maxlength="11" class="form-control" id="id_Cpf" value='{{ gestor_dados.Cpf }}'>               
+                    <input type="text" name="Cpf" maxlength="11" class="form-control" id="id_Cpf" value='{{ gestor_dados.Cpf|corrige_none }}'>               
                 </div>
 
                 <div class="form-group col-md-3">
                     <label for="id_Rg">RG:</label> 
-                    <input type="text" name="Rg" maxlength="9" class="form-control" id="id_Rg" value='{{ gestor_dados.Rg }}'>                
+                    <input type="text" name="Rg" maxlength="9" class="form-control" id="id_Rg" value='{{ gestor_dados.Rg|corrige_none }}'>                
                 </div>
                 
                 <div class="form-group col-md-3">
@@ -121,7 +121,7 @@
 
                 <div class="form-group col-md-5">
                     <label for="id_Complemento">Complemento:</label>
-                    <input type="text" name="Complemento" maxlength="100" class="form-control" id="id_Complemento" value='{{ endereco_dados.Complemento }}'>
+                    <input type="text" name="Complemento" maxlength="100" class="form-control" id="id_Complemento" value='{{ endereco_dados.Complemento|corrige_none }}'>
                 </div>
                 
                 <div class="form-group col-md-2">
