--- a/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
@@ -29,7 +29,7 @@
                     <th></th>
                     <th>Nome do Aluno</th>
                     <th>Situação</th>
-                    <th class="text-center">Notas</th>
+                    <th class="text-center">Boletim</th>
                 </tr>
                 
             </thead>
