--- a/templates/projeto/base/menu.html
+++ b/templates/projeto/base/menu.html
@@ -35,6 +35,14 @@
                 </li>       
             {% endif %}
 
+            <!-- Aluno -->
+            {% if request.session.Tipo_Pessoa == 'A' %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Histórico Escolar</a>
+                </li>       
+            {% endif %}
+            <!--  -->
+
             <!-- Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
